# apm_set

./: CMakeLists.txt  app.manifest  app.rc  ata_smart.c  ata_smart.h  main.c  readme.md
